@@ -1,2 +1,7 @@
 # DiffCover
 一种简单的差异代码覆盖实验代码
+
+## 修改tomcat的catalina.sh
+#####JAVA_OPTS="$JAVA_OPTS -javaagent:/Users/pingan/workspace/jacoco-0.8.3/lib/jacocoagent.jar=includes=*,output=tcpserver,port=9527,address=127.0.0.1,append=true -Xverify:none"
+
+
